docs(openapi): add docs for audio delete;
